crates/parser/src/snapshots/parser__tests__parse_inline_ok@0118_pick_witness_with_ident.ath.snap
---
source: crates/parser/src/tests.rs
description: "pick-witness a for b c (!claim a)\n"
input_file: crates/parser/test_data/parser/inline/ok/ded/0118_pick_witness_with_ident.ath
---
PICK_WITNESS_DED
  PICK_WITNESS_KW "pick-witness"
  WHITESPACE " "
  NAME
    IDENT "a"
  WHITESPACE " "
  FOR_KW "for"
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      NAME_REF
        IDENT "b"
  WHITESPACE " "
  NAME
    IDENT "c"
  WHITESPACE " "
  BANG_METHOD_CALL_DED
    L_PAREN "("
    BANG "!"
    IDENT_EXPR
      NAME_REF
        IDENT "claim"
    WHITESPACE " "
    EXPR_PHRASE
      IDENT_EXPR
        NAME_REF
          IDENT "a"
    R_PAREN ")"
  WHITESPACE "\n"

