crates/parser/src/snapshots/parser__tests__parse_inline_ok@0119_simple_method.ath.snap
---
source: crates/parser/src/tests.rs
description: "method (x) (!claim x)\n"
input_file: crates/parser/test_data/parser/inline/ok/expr/0119_simple_method.ath
---
METHOD_EXPR
  METHOD_KW "method"
  WHITESPACE " "
  L_PAREN "("
  NAME
    IDENT "x"
  R_PAREN ")"
  WHITESPACE " "
  BANG_METHOD_CALL_DED
    L_PAREN "("
    BANG "!"
    IDENT_EXPR
      NAME_REF
        IDENT "claim"
    WHITESPACE " "
    EXPR_PHRASE
      IDENT_EXPR
        NAME_REF
          IDENT "x"
    R_PAREN ")"
  WHITESPACE "\n"

