crates/parser/src/snapshots/parser__tests__parse_inline_ok@0120_pick_any_multi_param.ath.snap
---
source: crates/parser/src/tests.rs
description: "pick-any f:(Fun 'S 'T) g:(Fun 'U 'S) (!claim A)\n"
input_file: crates/parser/test_data/parser/inline/ok/ded/0120_pick_any_multi_param.ath
---
PICK_ANY_DED
  PICK_ANY_KW "pick-any"
  WHITESPACE " "
  TYPED_PARAM
    NAME
      IDENT "f"
    COLON ":"
    COMPOUND_SORT
      L_PAREN "("
      IDENT_SORT
        NAME_REF
          IDENT "Fun"
      WHITESPACE " "
      VAR_SORT
        SINGLE_QUOTE "'"
        IDENT "S"
      WHITESPACE " "
      VAR_SORT
        SINGLE_QUOTE "'"
        IDENT "T"
      R_PAREN ")"
  WHITESPACE " "
  TYPED_PARAM
    NAME
      IDENT "g"
    COLON ":"
    COMPOUND_SORT
      L_PAREN "("
      IDENT_SORT
        NAME_REF
          IDENT "Fun"
      WHITESPACE " "
      VAR_SORT
        SINGLE_QUOTE "'"
        IDENT "U"
      WHITESPACE " "
      VAR_SORT
        SINGLE_QUOTE "'"
        IDENT "S"
      R_PAREN ")"
  WHITESPACE " "
  BANG_METHOD_CALL_DED
    L_PAREN "("
    BANG "!"
    IDENT_EXPR
      NAME_REF
        IDENT "claim"
    WHITESPACE " "
    EXPR_PHRASE
      IDENT_EXPR
        NAME_REF
          IDENT "A"
    R_PAREN ")"
  WHITESPACE "\n"

