crates/parser/src/snapshots/parser__tests__parse_inline_ok@0122_nested_map_expr.ath.snap
---
source: crates/parser/src/tests.rs
description: "|{ foo := |{ bar := 1 }| }|\n"
input_file: crates/parser/test_data/parser/inline/ok/expr/0122_nested_map_expr.ath
---
MAP_EXPR
  PIPE_CURLY "|{"
  WHITESPACE " "
  MAP_BINDING
    EXPR_PHRASE
      IDENT_EXPR
        NAME_REF
          IDENT "foo"
    WHITESPACE " "
    COLON_EQ ":="
    WHITESPACE " "
    EXPR_PHRASE
      MAP_EXPR
        PIPE_CURLY "|{"
        WHITESPACE " "
        MAP_BINDING
          EXPR_PHRASE
            IDENT_EXPR
              NAME_REF
                IDENT "bar"
          WHITESPACE " "
          COLON_EQ ":="
          WHITESPACE " "
          EXPR_PHRASE
            IDENT_EXPR
              NAME_REF
                IDENT "1"
        WHITESPACE " "
        CURLY_PIPE "}|"
  WHITESPACE " "
  CURLY_PIPE "}|"
  WHITESPACE "\n"

