crates/parser/src/snapshots/parser__tests__parse_inline_ok@0125_term_var_no_annot.ath.snap
---
source: crates/parser/src/tests.rs
description: "?foo\n"
input_file: crates/parser/test_data/parser/inline/ok/expr/0125_term_var_no_annot.ath
---
TERM_VAR_EXPR
  QUESTION "?"
  IDENT "foo"
  WHITESPACE "\n"

