crates/parser/src/snapshots/parser__tests__parse_inline_ok@0126_simple_ident_expr_with_type.ath.snap
---
source: crates/parser/src/tests.rs
description: "foo: Int\n"
input_file: crates/parser/test_data/parser/inline/ok/expr/0126_simple_ident_expr_with_type.ath
---
IDENT_EXPR
  TYPED_PARAM
    IDENTIFIER
      IDENT "foo"
    COLON ":"
    WHITESPACE " "
    IDENT_SORT
      IDENTIFIER
        IDENT "Int"
  WHITESPACE "\n"

