crates/parser/src/snapshots/parser__tests__parse_inline_ok@0127_define_multi_one.ath.snap
---
source: crates/parser/src/tests.rs
description: "define [foo] := true\n"
input_file: crates/parser/test_data/parser/inline/ok/dir/0127_define_multi_one.ath
---
INFIX_DEFINE_DIR
  DEFINE_KW "define"
  WHITESPACE " "
  LIST_PAT
    L_BRACK "["
    IDENT_PAT
      NAME
        IDENT "foo"
    R_BRACK "]"
  WHITESPACE " "
  COLON_EQ ":="
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      NAME_REF
        IDENT "true"
  WHITESPACE "\n"

