crates/parser/src/snapshots/parser__tests__parse_inline_ok@0128_cases_with_on.ath.snap
---
source: crates/parser/src/tests.rs
description: "datatype-cases a on b { c => (!claim d) }\n"
input_file: crates/parser/test_data/parser/inline/ok/ded/0128_cases_with_on.ath
---
CASES_DED
  DATATYPE_CASES_KW "datatype-cases"
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      IDENTIFIER
        IDENT "a"
        WHITESPACE " "
  ON_KW "on"
  WHITESPACE " "
  IDENT_EXPR
    IDENTIFIER
      IDENT "b"
      WHITESPACE " "
  L_CURLY "{"
  WHITESPACE " "
  RESTRICTED_MATCH_DED
    IDENT_PAT
      IDENTIFIER
        IDENT "c"
        WHITESPACE " "
    FAT_ARROW "=>"
    WHITESPACE " "
    BANG_METHOD_CALL_DED
      L_PAREN "("
      BANG "!"
      IDENT_EXPR
        IDENTIFIER
          IDENT "claim"
          WHITESPACE " "
      EXPR_PHRASE
        IDENT_EXPR
          IDENTIFIER
            IDENT "d"
      R_PAREN ")"
      WHITESPACE " "
  R_CURLY "}"
  WHITESPACE "\n"

